# assistant_dev_implementation

./: .gitignore  EMOJI_REMOVAL_REPORT.md  LAUNCH_GUIDE.md  LICENSE  MANIFEST.in  Makefile  README.md  __main__.py  birthday_commands_guide.py  birthday_editing_guide.py  cli.py  cli_demo.py  code_example.py  demo_birthdays.py  demo_no_emoji.py  entry_point.py  example_birthdays.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.bat  run.sh  setup.py  start.py  test_birthday_editing.py  test_installation.py  test_real_data.py
cli/: __init__.py  interface.py
data/: contacts.json  contacts.json.backup  notes.json
managers/: __init__.py  contact_manager.py  note_manager.py
models/: contact.py  field.py  note.py
personal_assistant/: __init__.py  __main__.py  entry_point.py  interactive_cli.py  main.py
personal_assistant/data/: contacts.json  notes.json  notes.json.backup
personal_assistant/managers/: contact_manager.py
personal_assistant/models/: __init__.py  contact.py  field.py
personal_assistant/storage/: file_storage.py
personal_assistant/utils/: command_matcher.py  validators.py
storage/: __init__.py
tests/: README.md  __init__.py  run_tests.py  test_cli.py  test_managers.py  test_models.py  test_storage.py  test_utils.py
tests/data/: contacts.json  contacts.json.backup  notes.json  notes.json.backup
utils/: __init__.py  command_matcher.py
